fix: fix migration bug for java 11 to java 8